tests/ui/traits/non_lifetime_binders/placeholders-dont-outlive-static.good.stderr
error[E0310]: the placeholder type `T` may not live long enough
  --> $DIR/placeholders-dont-outlive-static.rs:18:5
   |
LL |     foo();
   |     ^^^^^
   |     |
   |     the placeholder type `T` must be valid for the static lifetime...
   |     ...so that the type `T` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound
   |
LL | fn good() where for<T> T: 'static, T: 'static {
   |                                  ++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0310`.
